--- a/src/styles/base/_defaults.scss
+++ b/src/styles/base/_defaults.scss
@@ -1,9 +1,11 @@
 html,
 body {
-  min-height: 100%;
   height: 100%;
+  min-height: 100%;
   max-width: 100vw;
   overflow-x: clip;
+
+  font-family: var(--font-roboto), system-ui, sans-serif;
 }
 
 html {
@@ -39,10 +41,4 @@ a {
   &:visited {
     color: inherit;
   }
-}
-
-/* stylelint-disable-next-line selector-id-pattern */
-#__next,
-#root {
-  isolation: isolate;
 }
